--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "chit_chat",
+  "name": "brit_chat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@hookform/error-message": "^2.0.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,22 +17,26 @@
     "axios": "^1.6.5",
     "jsencrypt": "^3.3.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-spring-bottom-sheet": "^3.4.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.69.7",
     "socket.io-client": "^4.7.3",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"tsc -w\"",
-    "build": "env-cmd -f .env.production react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set PORT=3001 && concurrently \"craco start\" \"tsc -w\"",
+    "build": "env-cmd -f .env.production craco build --config ./craco.config.js",
+    "test": "craco test",
+    "eject": "craco  eject"
   },
   "eslintConfig": {
     "extends": [
@@ -52,8 +57,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node-sass": "^4.11.3",
     "concurrently": "^8.2.0",
+    "craco-alias": "^3.0.1",
     "http-proxy-middleware": "^2.0.6"
   }
 }
